[tool.poetry]
name = "cli-bot"
version = "0.1.0"
description = "Python web console bot"
authors = ["Valentyna Gordynska <vgordynska@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cli_bot"}]

[tool.poetry.dependencies]
python = "3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
